--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-svgr": "^4.2.0",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
