--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -18,7 +18,10 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    /* svg */
+    "types": ["vite-plugin-svgr/client"]
   },
-  "include": ["src"]
+  "include": ["src", "images.d.ts"]
 }
