--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "dependencies": {
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-query-devtools": "^5.59.0",
+    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
     "@vanilla-extract/css": "^1.16.0",
     "axios": "^1.7.7",
     "firebase": "^10.14.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "tsparticles": "^3.5.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-svgr": "^4.2.0",
     "zustand": "^5.0.0-rc.2"
