--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,7 +21,7 @@
     "noFallthroughCasesInSwitch": true,
 
     /* svg */
-    "types": ["vite-plugin-svgr/client"]
+    "types": ["vite-plugin-svgr/client", "firebase"]
   },
   "include": ["src", "images.d.ts"]
 }
