--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,7 +20,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
-    /* svg */
+    "typeRoots": ["node_modules/@types"],
     "types": ["vite-plugin-svgr/client", "firebase"]
   },
   "include": ["src", "images.d.ts"]
