--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,8 +20,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
-    "typeRoots": ["node_modules/@types"],
-    "types": ["vite-plugin-svgr/client", "firebase"]
+    "types": ["vite-plugin-svgr/client"]
   },
   "include": ["src", "images.d.ts"]
 }
